Moar whitespace fixes.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,15 +99,12 @@ p {
 .constraint {
 	max-width: 960px;
 	margin: auto;
+	padding: 10px;
 }
 
 #wrap {
 	position: relative;
 	min-height: 100%;
-}
-
-#wrap > * {
-	padding: 10px;
 }
 
 #header, #header a {
@@ -125,8 +122,6 @@ p {
 
 #header {
 	margin: 0;
-	padding-top: 0;
-	padding-bottom: 0;
 	border: none;
 	background: #166491;
 	position: relative;
@@ -134,6 +129,11 @@ p {
   -moz-box-shadow: 0 2px 2px #888888;
   -webkit-box-shadow: 0 2px 2px #888888;
   box-shadow: 0 2px 2px #888888;
+}
+
+#header .constraint {
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 #header h1 {
@@ -172,7 +172,8 @@ p {
 
 .inline-list {
 	position: relative;
-	padding: 0;
+	padding-top: 0;
+	padding-bottom: 0;
 	margin: auto;
 }
 
